Japanese mode initial checkin
Japanese mode works like LingQ's sentence mode. It uses
Html.fromHtml() to extract the article text with light formatting. It then
separates the text into sentences.

The UI should probably be a different Activity or something, but I
don't want to look into that yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -376,4 +376,9 @@
     <string name="notification_action_media_play">Play</string>
     <string name="notification_action_media_fastforward">Fast Forward</string>
     <string name="notification_action_media_next">Next</string>
+
+	<string name="menuJapaneseMode">Japanese Mode</string>
+	<string name="japanesePreviousPage">Previous</string>
+	<string name="japaneseNextPage">Next</string>
+	<string name="japaneseDictionaryNext">More definitions</string>
 </resources>
