--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-    <string name="app_name" translatable="false">wallabag</string>
+    <string name="app_name" translatable="false">Japanese for Me</string>
     <string name="btnMarkRead">Mark as Read</string>
     <string name="btnMarkUnread">Mark as Unread</string>
     <string name="add_to_favorites">Add to Favorites</string>
@@ -102,8 +102,8 @@
     <string name="themeName_solarized">Solarized</string>
     <string name="menu_readArticle_increaseFontSize">Increase font size</string>
     <string name="menu_readArticle_decreaseFontSize">Decrease font size</string>
-    <string name="aboutText"><b>wallabag app for Android</b>\n
-        wallabag is a self-hostable app, allowing you to not miss any content anymore. Click, save and read the extracted content at your leisure.</string>
+    <string name="aboutText"><b>Japanese for Me app for Android</b>\n
+        wallabag is a self-hostable app, allowing you to not miss any content anymore. Click, save and read the extracted content at your leisure. Japanese for Me is a modification of the Wallabag Android app to add support for reading Japanese with a dictionary.</string>
     <string name="readSpeed">Read speed</string>
     <string name="voiceHeight">Voice pitch</string>
     <string name="readVolume">Read volume</string>
